--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -9,86 +9,181 @@
         Icon="/Assets/avalonia-logo.ico"
         Title="PlannerA">
 
+    <Design.DataContext>
+        <!-- This only sets the DataContext for the previewer in an IDE,
+             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
+        <vm:MainWindowViewModel/>
+    </Design.DataContext>
 
-
-
-
-
-            </Grid.RowDefinitions>
-            <Button x:Name="Project"
-                    Content="Заказы"
-                    Grid.Column="0"
-                    Grid.Row="0"
-                    Width="200"
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Margin="0" />
-            <Button x:Name="Supplies"
-                    Content="Оборудование"
-                    Grid.Column="1"
-                    Grid.Row="0"
-                    Width="200"
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Margin="0" />
-            <Button x:Name="Employee"
-                    Content="Сотрудники"
-                    Grid.Column="2"
-                    Grid.Row="0"
-                    Width="200"
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Margin="0" />
-            <Button x:Name="Materials"
-                    Content="Материалы"
-                    Grid.Column="3"
-                    Grid.Row="0"
-                    Width="200"
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Margin="0" />
-            <Button x:Name="AllProject"
-                    Content="Список заказов"
-                    Grid.Column="0"
-                    Grid.Row="1"
-                    Width="200"
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Margin="0" />
-            <Button x:Name="Add"
-                    Content="Добавить"
-                    Grid.Column="1"
-                    Grid.Row="1"
-                    Width="200"
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Margin="0" />
-            <Button x:Name="Edit"
-                    Content="Редактировать"
-                    Grid.Column="2"
-                    Grid.Row="1"
-                    Width="200"
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Margin="0" />
-            <Button x:Name="Delete"
-                    Content="Удалить"
-                    Grid.Column="3"
-                    Grid.Row="1"
-                    Width="200"
-                    Height="30"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Margin="0" />
-
-
-
-
+    
+       <StackPanel Orientation="Vertical">
+        <Grid>
+               <Grid.ColumnDefinitions>
+                     <ColumnDefinition Width="*"/>
+                     <ColumnDefinition Width="*"/>
+                     <ColumnDefinition Width="*"/>
+                     <ColumnDefinition Width="*"/>
+              </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            
+        </Grid.RowDefinitions>
+        <Button x:Name="Project"
+                Content="Заказы"
+                Grid.Column="0"
+                Grid.Row="0"/>
+        <Button x:Name="Supplies"
+                Content="Оборудование"
+                Grid.Column="1"
+                Grid.Row="0"/>
+        <Button x:Name="Employee"
+                Content="Сотрудники"
+                Grid.Column="2"
+                Grid.Row="0"/>
+        <Button x:Name="Materials"
+                Content="Материалы"
+                Grid.Column="3"
+                Grid.Row="0"/>
+        <Button x:Name="AllProject"
+                Content="Список заказов"
+                Grid.Column="0"
+                Grid.Row="1"/>
+        <Button x:Name="Add"
+                Content="Добавить"
+                Grid.Column="1"
+                Grid.Row="1"/>
+        <Button x:Name="Edit"
+                Content="Редактировать"
+                Grid.Column="2"
+                Grid.Row="1"/>
+        <Button x:Name="Delete"
+                Content="Удалить"
+                Grid.Column="3"
+                Grid.Row="1"/>
+        
+        </Grid>
+        <Grid ShowGridLines="True">
+                <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        
+                </Grid.RowDefinitions>
+                <TextBlock x:Name="Proj"
+                       Text="№ Заказа/день"/>
+                <TextBlock x:Name="Day1"
+                       Text="1"
+                       Grid.Column="1"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day2"
+                       Text="2"
+                       Grid.Column="2"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day3"
+                       Text="3"
+                       Grid.Column="3"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day4"
+                       Text="4"
+                       Grid.Column="4"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day5"
+                       Text="5"
+                       Grid.Column="5"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day6"
+                       Text="6"
+                       Grid.Column="6"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day7"
+                       Text="7"
+                       Grid.Column="7"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Today"
+                       Text="Now"
+                       Grid.Column="8"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day9"
+                       Text="9"
+                       Grid.Column="9"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day10"
+                       Text="10"
+                       Grid.Column="10"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day11"
+                       Text="11"
+                       Grid.Column="11"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day12"
+                       Text="2"
+                       Grid.Column="12"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day13"
+                       Text="13"
+                       Grid.Column="13"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day14"
+                       Text="14"
+                       Grid.Column="14"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day15"
+                       Text="15"
+                       Grid.Column="15"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day16"
+                       Text="16"
+                       Grid.Column="16"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day17"
+                       Text="17"
+                       Grid.Column="17"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day18"
+                       Text="18"
+                       Grid.Column="18"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day19"
+                       Text="19"
+                       Grid.Column="19"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day20"
+                       Text="20"
+                       Grid.Column="20"
+                       Grid.Row="0"/>
+                <TextBlock x:Name="Day21"
+                       Text="21"
+                       Grid.Column="21"
+                       Grid.Row="0"/>
+        </Grid>
+    
+                
+    </StackPanel>
+    
+    
 </Window>
